@@ -1,3 +1,6 @@
+2004-05-04 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: add description of items into rdf.
+
 2004-03-31 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/whatsnew-list.rb: add adf:about attr into <channel>.
 
